<?xml version="1.0"?>
<package format="2">
  <name>voxblox_proto</name>
  <version>0.0.0</version>
  <description>Voxblox</description>

  <author email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</author>
  <author email="marius.fehr@mavt.ethz.ch">Marius Fehr</author>

  <maintainer email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</maintainer>
  <maintainer email="marius.fehr@mavt.ethz.ch">Marius Fehr</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rosidl_default_generators</depend>
  <depend>minkindr</depend>

  <depend>eigen3_cmake_module</depend>
  <depend>eigen</depend>
  <depend>protobuf</depend>
  <depend>libgflags-dev</depend>
  <depend>libgoogle-glog-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
