<?xml version="1.0"?>
<package format="3">
  <name>voxblox_rviz_plugin</name>
  <version>0.0.0</version>
  <description>RViz plugin for displaying incremental voxblox mesh messages.</description>
  <maintainer email="ztaylorr@ethz.ch">Zachary Taylor</maintainer>
  <license>BSD</license>
  <author>Zachary Taylor</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rviz_common</depend>
  <depend>pluginlib</depend>
  
  <depend>voxblox</depend>
  <depend>voxblox_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
